Add more files managed by chezmoi

--- a/dot_config/Brewfile
+++ b/dot_config/Brewfile
@@ -1,12 +1,15 @@
 tap "fluxcd/tap"
 tap "homeport/tap"
 tap "shopify/shopify"
+brew "cfssl"
 brew "chezmoi"
+brew "dive"
 brew "fluxcd/tap/flux"
 brew "fzf"
 brew "git"
 brew "gnupg"
 brew "go"
+brew "gpg2"
 brew "helm"
 brew "homeport/tap/dyff"
 brew "htop"
@@ -18,22 +21,35 @@ brew "kubie"
 brew "kustomize"
 brew "mas"
 brew "nmap"
+brew "pinentry-mac"
+brew "pluto"
+brew "p7zip"
 brew "shopify/shopify/ejson"
+brew "skopeo"
 brew "teleport"
+brew "telnet"
 brew "terraform"
+brew "tinyproxy"
 brew "tree"
+brew "watch"
 brew "wget"
 brew "yq"
 brew "zsh-autosuggestions"
 cask "brave-browser"
+cask "caffeine"
 cask "citrix-workspace"
 cask "command-x"
 cask "displaylink"
+cask "docker"
 cask "firefox"
+cask "iina"
 cask "iterm2"
 cask "microsoft-teams"
 cask "middleclick"
 cask "rectangle"
 cask "stats"
+cask "the-unarchiver"
+cask "unity"
+cask "unity-hub"
 cask "vscodium"
 mas "Citrix Secure Access", id: 1338991513
