chore: Update dotfiles

--- a/dot_config/Brewfile
+++ b/dot_config/Brewfile
@@ -1,8 +1,10 @@
 tap "fluxcd/tap"
 tap "homeport/tap"
 tap "shopify/shopify"
+tap "weaveworks/tap"
 brew "cfssl"
 brew "chezmoi"
+brew "cilium-cli"
 brew "dive"
 brew "fluxcd/tap/flux"
 brew "fzf"
@@ -13,6 +15,7 @@ brew "gpg2"
 brew "helm"
 brew "homeport/tap/dyff"
 brew "htop"
+brew "hugo"
 brew "jq"
 brew "kind"
 brew "kubernetes-cli"
@@ -20,18 +23,23 @@ brew "krew"
 brew "kubie"
 brew "kustomize"
 brew "mas"
+brew "minio-mc"
 brew "nmap"
 brew "pinentry-mac"
 brew "pluto"
+brew "pre-commit"
 brew "p7zip"
 brew "shopify/shopify/ejson"
 brew "skopeo"
+brew "sops"
+brew "stern"
 brew "teleport"
 brew "telnet"
 brew "terraform"
 brew "tinyproxy"
 brew "tree"
 brew "watch"
+brew "weaveworks/tap/tfctl"
 brew "wget"
 brew "yq"
 brew "zsh-autosuggestions"
